[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simnetpy"
dynamic = ["version"]
description = "Python package for the Construction and Clustering of Similarity Networks"
readme = "README.md"
license = "BSD"
requires-python = ">=3.8"
authors = [
    { name = "Aidan Marnane", email = "aidan.marnane@gmail.com" },
]
keywords = [
    "clustering",
    "community-detection",
    "graph-clustering",
    "graphs",
    "network-construction",
    "networks",
    "similarity-network",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "click",
    "igraph",
    "matplotlib",
    "numpy",
    "palettable",
    "pandas",
    "pyyaml",
    "scikit-learn",
    "scipy",
    "seaborn",
    "snfpy",
    "spectralcluster",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "twine",
]

[project.urls]
Download = "https://github.com/amarnane/simnetpy"
Homepage = "https://github.com/amarnane/simnetpy"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
addopts = [
"--import-mode=importlib",
]
