[metadata]
name = simnet
version = attr: simnet.version.__version__
license = BSD
license_files = LICENSE
url = https://github.com/amarnane/simnet
author = Aidan Marnane
author_email = aidan.marnane@gmail.com
keywords = similarity-network network-construction networks graphs clustering graph-clustering community-detection  
description = Construction  and Analysis of Similarity Networks
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: BSD
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
install_requires =
    click
    igraph
    # graph-tool
    spectralcluster
    snfpy
    matplotlib
    numpy
    pandas
    scikit-learn
    scipy
    seaborn
    # plotly
    tqdm
    pyyaml
    palettable
setup_requires =
    pytest-runner
tests_require =
    pytest
packages = find:
package_dir =
    =src

[options.extras_require]
dev =
    twine

[options.packages.find]
where = src

[bdist_wheel]
universal = 0

[aliases]
test = pytest

[tool:pytest]
testpaths =
    tests

